--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1>wwwapas</h1>
         <ul>
             <li>
-                inicio
-                servicios
-                contacto
+                <a href="#">Inicio</a>
+                <a href="#servicios">Servicios</a>
+                <a href="#contacto">Contacto</a>
             </li>
         </ul>
     </nav>
@@ -29,6 +29,7 @@
             </p>
         </section>
         <section>
+            <img src="./img/foto.png" alt="imagen wapas">
         </section>
     </header>
     <main>
@@ -54,8 +55,9 @@
                 </p>
             </section>
         </div>
-        <div>
+        <div id="servicios">
             <section>
+                <img src="./img/img-servicios.png" alt="imagen servicios">
             </section>
             <section>
                 <h2>servicios</h2>
@@ -72,7 +74,7 @@
                 </ol>
             </section>
         </div>
-        <div>
+        <div id="contacto">
             <section>
                 <h4>¿Quéres que nos <br>
                     contactemos con vos?
@@ -82,9 +84,14 @@
         </div>
     </main>
     <aside>
+        <a href=""><img src="./img/instagram-icon.png" alt="Link Instagram"></a>
+        <a href=""><img src="./img/dribbble-icon.png" alt="Link dribble"></a>
+        <a href=""><img src="./img/linkedin-icon.png" alt="Link LinkedIn"></a>
+        <a href=""><img src="./img/facebook-icon.png" alt="Link Facebook"></a>
     </aside>
     <footer>
         <h1>wwwapas</h1>
+        <a href="mailto: wwwapas_sm@gmail.com"></a>
     </footer>
 
 </body>
