--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
                     contactemos con vos?
                 </h4>
                 <p>Envianos tu consulta >></p>
+                <form method="POST" action="./php/action.php">
+                    <label for="">Nombre<span>*</span>:<br>
+                        <input name="nombre" required type="text"></label><br>
+                    <label for="">Email<span>*</span>:<br>
+                        <input name="email" required type="text"></label><br>
+                    <label for="">Mensaje<span>*</span>:<br>
+                        <textarea required name="comentarios" id="" cols="30" rows="10"></textarea> </label>
+                </form>
+                <div>
+                    <input type="submit" value="Enviar consulta">
+                    <input type="reset" value="Borrar">
+                </div>
             </section>
         </div>
     </main>
@@ -91,7 +103,7 @@
     </aside>
     <footer>
         <h1>wwwapas</h1>
-        <a href="mailto: wwwapas_sm@gmail.com"></a>
+        <a href="mailto: wwwapas_sm@gmail.com">wwwapas_sm@gmail.com</a>
     </footer>
 
 </body>
